+++++++++++
Python News
+++++++++++

What's New in Python 3.7.0 alpha 1?
===================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- bpo-29949: Fix memory usage regression of set and frozenset object.

- bpo-29935: Fixed error messages in the index() method of tuple, list and deque
  when pass indices of wrong type.

- bpo-29816: Shift operation now has less opportunity to raise OverflowError.
  ValueError always is raised rather than OverflowError for negative counts.
  Shifting zero with non-negative count always returns zero.

- bpo-24821: Fixed the slowing down to 25 times in the searching of some
  unlucky Unicode characters.

- bpo-29894: The deprecation warning is emitted if __complex__ returns an
  instance of a strict subclass of complex.  In a future versions of Python
  this can be an error.

- bpo-29859: Show correct error messages when any of the pthread_* calls in
  thread_pthread.h fails.

- bpo-29849: Fix a memory leak when an ImportError is raised during from import.

- bpo-28856: Fix an oversight that %b format for bytes should support objects
  follow the buffer protocol.

- bpo-29723: The ``sys.path[0]`` initialization change for bpo-29139 caused a
  regression by revealing an inconsistency in how sys.path is initialized when
  executing ``__main__`` from a zipfile, directory, or other import location.
  The interpreter now consistently avoids ever adding the import location's
  parent directory to ``sys.path``, and ensures no other ``sys.path`` entries
  are inadvertently modified when inserting the import location named on the
  command line.

- bpo-29568: Escaped percent "%%" in the format string for classic string
  formatting no longer allows any characters between two percents.

- bpo-29714: Fix a regression that bytes format may fail when containing zero
  bytes inside.

- bpo-29695: bool(), float(), list() and tuple() no longer take keyword arguments.